--- a/HovText/TooBigLogfile.resx
+++ b/HovText/TooBigLogfile.resx
@@ -117,7 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Dev2StableInfo.Text" xml:space="preserve">
+  <data name="TooBigInfo.Text" xml:space="preserve">
     <value>You have enabled troubleshoot logging and it seems the logfile has increased its size to more than 10MBytes. This is too much and will slow down the performance of HovText, so please either disable the troubleshoot logging or truncate (empty) the logfile.</value>
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
